--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^0.19.1"
 dnspython = "^2.1.0"
 motor = "^2.5.1"
 requests = "^2.26.0"
+dis-snek = {git = "https://github.com/Discord-Snake-Pit/Dis-Snek.git"}
 
 [tool.poetry.dev-dependencies]
 
