--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pcn"
-version = "0.0.1"
+version = "0.3.1"
 description = "PCN Bot using dis-snek"
 authors = ["compil3 <luca.tenuta@gmail.com>"]
 license = "MIT"
@@ -14,6 +14,7 @@ motor = "^2.5.1"
 requests = "^2.26.0"
 dis-snek = {git = "https://github.com/Discord-Snake-Pit/Dis-Snek.git"}
 pyxtension = "^1.13.16"
+orjson = "^3.6.4"
 
 [tool.poetry.dev-dependencies]
 
