--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ requests = "^2.26.0"
 dis-snek = {git = "https://github.com/Discord-Snake-Pit/Dis-Snek.git"}
 pyxtension = "^1.13.16"
 orjson = "^3.6.4"
+psutil = "^5.8.0"
+APScheduler = "^3.8.1"
+httpx = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
