--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["compil3 <luca.tenuta@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9.5"
+python = "^3.10.0"
 black = "^21.9b0"
 python-dotenv = "^0.19.1"
 dnspython = "^2.1.0"
@@ -18,6 +18,7 @@ orjson = "^3.6.4"
 psutil = "^5.8.0"
 APScheduler = "^3.8.1"
 httpx = "^0.20.0"
+snek-paginator = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 
